# isic_2024-skin_cancer_detection_with_3d-tbp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  fast_api.py  inference.py  pyproject.toml  requirements.txt  temp.py  train.py
.envs/: .conda
configs/: config.yaml
configs/dataset/: tf.yaml
configs/datasets/: tf.yaml
configs/meta_data/: meta_data.yaml
configs/model/tf/: resnet18.yaml  resnet50.yaml
configs/model/torch/: efficientnet_b0.yaml  resnet50.yaml
configs/training/: tf.yaml
configs/training/torch/: trainer.yaml
docs/: architecture.drawio
notebooks/: analyze.ipynb  inference.ipynb  temp.ipynb
notebooks/methods_and_apparatus_for_identifying_skin_features_of_interest-image/: doc_original.txt
outputs/2024-07-07/09-30-18/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/09-32-47/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/09-36-34/.hydra/: hydra.yaml
outputs/2024-07-07/09-39-26/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/09-42-49/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/19-19-46/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/19-20-31/.hydra/: config.yaml  hydra.yaml
outputs/2024-07-07/20-24-29/.hydra/: hydra.yaml
outputs/2024-07-07/20-34-47/.hydra/: config.yaml  (+1 more)
src/data_processing/tf/: data_schema.py  dataset.py  dataset_processing.py
src/dataset/: dataset_processing.py
src/dataset/tf/: dataset.py
src/dataset/torch/: dataset.py  transforms.py
src/models/tf/: model_schema.py  resnet50.py  simple_model.py
src/models/torch/: efficientnet.py  resnet50.py  trainer.py
(+233 files in other folders)
